# IzEngine

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat  install.bat  main.cpp  main.hpp  vcpkg-configuration.json  vcpkg.json
plugins/Graphics/: CMakeLists.txt  main.cpp
plugins/Graphics/Features/: CMakeLists.txt  General.cpp  General.hpp  Graphics.cpp  Graphics.hpp
plugins/Graphics/Settings/: General.hpp
plugins/Lagometer/: CMakeLists.txt  main.cpp
plugins/Lagometer/Modules/: CMakeLists.txt  Lagometer.cpp  Lagometer.hpp
plugins/Reloader/: CMakeLists.txt  main.cpp
private/: CMakeLists.txt  private.cpp
private/Modules/: ESP.cpp  ESP.hpp
src/: CMakeLists.txt  main.cpp
src/Engine/: API.hpp  Base.hpp  CMakeLists.txt  Plugin.hpp
src/Engine/Backends/: DX9.hpp  ImGUI.hpp
src/Engine/Backends/DX9/: Assets.cpp  Assets.hpp  CMakeLists.txt  Device.cpp  Device.hpp
src/Engine/Backends/ImGUI/: Components.cpp  Components.hpp  UI.cpp  UI.hpp
src/Engine/Core/: CMakeLists.txt  Common.hpp  Macros.hpp  Math.hpp  Modules.hpp
src/Engine/Core/Application/: Application.hpp
src/Engine/Core/Base/: CMakeLists.txt  Log.hpp  Macros.hpp  Ref.hpp  Serializer.hpp  UUID.cpp  UUID.hpp
src/Engine/Core/Communication/: Actions.cpp  Actions.hpp  Event.hpp  Events.hpp
src/Engine/Core/Compilers/: CMakeLists.txt  Clang.hpp  MSVC.hpp
src/Engine/Core/Console/: CMakeLists.txt  Console.hpp
src/Engine/Core/Containers/: CMakeLists.txt  CircularBuffer.hpp
src/Engine/Core/Features/: Features.hpp
src/Engine/Core/IO/: CMakeLists.txt  File.cpp  File.hpp  VFS.cpp  VFS.hpp  Zip.cpp  Zip.hpp
src/Engine/Core/Input/: Bind.hpp  CMakeLists.txt  Input.hpp  KeyListener.hpp  Keyboard.hpp  Mouse.hpp
src/Engine/Core/Interfaces/: IObject.hpp  ISerializable.hpp
src/Engine/Core/Macros/: Base.hpp  CMakeLists.txt  Class.hpp  Debug.hpp
src/Engine/Core/Math/: CMakeLists.txt  GLM.hpp  Math.cpp  Math.hpp  Matrix3.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/Engine/Core/Memory/: Assembler.hpp  CMakeLists.txt  Function.hpp  Hook.hpp  Memory.hpp  Signature.hpp  StackCanary.cpp  StackCanary.hpp
src/Engine/Core/Modules/: CMakeLists.txt  Feature.cpp  Feature.hpp  Features.hpp  Module.cpp  Module.hpp  Modules.cpp  Modules.hpp
src/Engine/Core/Network/: CMakeLists.txt  HTTP.cpp  HTTP.hpp  WebSocket.cpp  WebSocket.hpp
src/Engine/Core/Screen/: CMakeLists.txt  VirtualScreen.cpp  VirtualScreen.hpp
src/Engine/Core/Serializer/: CMakeLists.txt  Serializer.hpp
src/Engine/Core/System/: CMakeLists.txt  Crash.hpp  Environment.hpp  Plugin.hpp  Plugins.cpp  Plugins.hpp  System.hpp  ThreadPool.cpp  ThreadPool.hpp  Window.hpp
src/Engine/Core/Tests/: Base.hpp  CMakeLists.txt  Tests.cpp
src/Engine/Core/UI/: CMakeLists.txt  VirtualScreen.hpp
src/Engine/Core/Utils/: CMakeLists.txt  StringUtils.cpp  StringUtils.hpp  Utils.cpp  Utils.hpp
src/Engine/Renderer/: CMakeLists.txt  Common.hpp
src/Engine/Renderer/Base/: CMakeLists.txt  Renderer.hpp
src/Engine/Renderer/Core/: CMakeLists.txt  Renderer.hpp
src/Engine/Renderer/Drawing/: CMakeLists.txt  Draw2D.hpp  HUD.cpp  HUD.hpp  Text.cpp  Text.hpp
src/Engine/Renderer/Resources/: Browser.hpp  CMakeLists.txt  Font.hpp  Texture.hpp
src/Engine/Renderer/UI/: VirtualScreen.cpp  VirtualScreen.hpp
src/Engine/Sys/: CMakeLists.txt  Log.hpp  Memory.hpp  Win32.hpp
src/Engine/Sys/Memory/: Assembler.hpp  CMakeLists.txt  Hook.hpp
src/Engine/Sys/Win32/: CMakeLists.txt  Console.hpp  DLL.cpp  DLL.hpp  DLLS.cpp  DLLS.hpp  Environment.cpp  Environment.hpp  KeyListener.cpp  KeyListener.hpp  Memory.cpp  Memory.hpp  Plugin.cpp  Plugin.hpp  Plugins.cpp  Plugins.hpp  Signature.cpp  Signature.hpp  Sys.hpp
src/Examples/: WindowsDX9.cpp
src/Game/: Application.cpp  Base.hpp  CMakeLists.txt  Definitions.hpp  Dvar.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Plugin.hpp
src/Game/Definitions/: Declaration.cpp  Declaration.hpp  Defines.hpp  Events.hpp  Functions.asm  Functions.cpp  Functions.hpp  Hooks.cpp  Hooks.hpp  Structs.hpp
src/Game/Engine/: Assets.cpp  Assets.hpp  GUI.cpp  GUI.hpp  Render.cpp  Render.hpp  Renderer.cpp
src/Game/Engine/Backends/: D3D9.cpp  D3D9.hpp
src/Game/Engine/Drawing/: Draw2D.cpp  Draw2D.hpp  Draw3D.cpp  Draw3D.hpp  HUD.cpp  HUD.hpp  Lines.cpp  Lines.hpp  Text.cpp  Text.hpp
src/Game/Engine/UI/: Memory.hpp  Modules.cpp  Settings.cpp  Themes.hpp  Toolbar.cpp
src/Game/Math/: CMakeLists.txt  Math.cpp  Math.hpp
src/Game/Player/: PMove.cpp  PMove.hpp  Player.cpp  Player.hpp
src/Game/Render/: Assets.cpp  CMakeLists.txt  Draw.cpp  Draw.hpp  Draw2D.cpp  Draw2D.hpp  Draw3D.cpp  Draw3D.hpp  GUI.cpp  GUI.hpp  ImGUI.cpp  ImGUI.hpp  Render.cpp  Render.hpp
src/Game/Render/Draw/: CMakeLists.txt  HUD.cpp  HUD.hpp  Lines.cpp  Text.cpp  Text.hpp  Window.cpp  Window.hpp
src/Game/Renderer/: Assets.cpp  Assets.hpp  CMakeLists.txt  GUI.cpp  GUI.hpp  Renderer.cpp  Renderer.hpp
src/Game/Sys/: Console.cpp  Console.hpp  Dvar.hpp  Patch.cpp  Patch.hpp  Sys.cpp  Sys.hpp
src/Game/System/: CMakeLists.txt  Console.cpp  Console.hpp  Dvar.cpp  Dvar.hpp  Patch.cpp  Patch.hpp  System.cpp  System.hpp
src/Game/World/: CMakeLists.txt  World.cpp  World.hpp
src/Math/: CMakeLists.txt  Math.cpp
src/Modules/: CMakeLists.txt  Module.cpp  Module.hpp  Modules.cpp  Modules.hpp
src/Modules/Player/: CMakeLists.txt  ESP.cpp  ESP.hpp  FPS.cpp  FPS.hpp  Velocity.cpp  Velocity.hpp
src/Modules/Sys/: CMakeLists.txt  Console.cpp  Console.hpp
src/Sys/: Assets.cpp  Assets.hpp  CMakeLists.txt  DLL.cpp  DLL.hpp  Dvar.hpp  Environment.cpp  Environment.hpp  Function.hpp  Hook.hpp  KeyListener.cpp  KeyListener.hpp  Log.cpp  Log.hpp  Memory.cpp  Memory.hpp  Render.cpp  Render.hpp
src/Sys/Fonts/: CMakeLists.txt  LogoBytes.hpp
src/Sys/Listeners/: KeyListener.cpp  KeyListener.hpp
src/Sys/Render/: D3D9.cpp  D3D9.hpp  D3D9EX.cpp  D3D9EX.hpp
src/Tools/: CMakeLists.txt
src/Tools/CEF/: CMakeLists.txt  main.cpp
src/Utils/: CMakeLists.txt  GLM.hpp  ImGUI.cpp  ImGUI.hpp  Macros.hpp  Math.cpp  Math.hpp  Matrix3.hpp  Utils.cpp  Utils.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
(+182 files in other folders)
