# Build
add_library(Lagometer SHARED main.cpp)
target_link_libraries(Lagometer PRIVATE IW3SR.API)
set_target_properties(Lagometer PROPERTIES FOLDER Plugins)

add_subdirectory(Modules)

get_target_property(SOURCES Lagometer SOURCES)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})

# Install
install(TARGETS Lagometer RUNTIME DESTINATION ${COD4}/iw3sr/plugins)
